--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -87,10 +87,11 @@
 	</div>
 
 	<div class="panel panel-default xui-tableBox">
-
-		<div class="panel-heading xui-headStyle clearfix">
-                <a href="/apps/rebate/rebate/" class="btn btn-success ml10 fr xui-btnSetting"><span class="xui-add-btn-icon">+</span>新建返利活动</a>
-            </div>
+		<div class="panel-header clearfix">
+			<a href="/apps/rebate/rebate/" class="btn btn-success fr">
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建返利活动
+			</a>
+		</div>
 		<div
 			class="panel-body panel-table p0"
 			data-ui-role="advanced-table"
@@ -117,13 +118,11 @@
 		<thead>
 			<tr>
 				<th style="word-wrap: break-word;word-break: break-all;white-space: pre-wrap;">活动名称</th>
-				<th>开始时间</th>
-				<th>结束时间</th>
-				<th>红包类型</th>
+				<th>关注人数</th>
+				<th>扫描后成交金额</th>
+				<th>首次下单数</th>
+				<th>有效期</th>
 				<th>活动状态</th>
-				<th>参与人数</th>
-				<th>总金额</th>
-				<th>已发放金额</th>
 				<th>操作</th>
 			</tr>
 		</thead>
@@ -138,37 +137,31 @@
 				   <a
 					class="xui-ellipsisFox"
 					limit="15"
-					href="/apps/rebate/rebate/?id=${item.id}&related_page_id=${item.related_page_id}"
+					href="/apps/rebate/rebate/?id=${item.id}"
 					style="text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;"
 					>
 						${item.name}
 					</a>
 				</td>
 				<td>
+					${item.attention_number}
+				</td>
+				<td>
+					${item.order_money}
+				</td>
+				<td>
+					${item.first_buy_num}
+				</td>
+				<td>
 					${item.start_time}
-				</td>
-				<td>
 					${item.end_time}
-				</td>
-				<td>
-					${item.rebate_type}
 				</td>
 				<td>
 					${item.status}
 				</td>
-				<td>
-					${item.participant_count}
-				</td>
-				<td>
-					${item.total_money}
-				</td>
-				<td>
-					${item.already_paid_money}
-				</td>
 				<td class="xui-operations">
-				    <a href="/apps/rebate/rebate_participances/?id=${item.id}" class="ml5">查看</a>
-				    <a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id} target="_blank">预览</a>
-				    <a href="javascript:void(0);" class="ml5 xa-link-copy" data-clipboard-text="/m/apps/rebate/m_rebate/?webapp_owner_id=${item.owner_id}&id=${item.id}">复制链接</a>
+				    <a href="/apps/rebate/rebate_participances/?id=${item.id}" class="ml5">编辑</a>
+				    <a  class="ml5">查看二维码</a>
 					{{if (item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
