新增会员列表页面

--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -132,10 +132,10 @@
 					</a>
 				</td>
 				<td>
-					<a href="/apps/rebate/attention_participances/?id=${item.id}">${item.attention_number}</a>
+					<a href="/apps/rebate/rebate_participances/?id=${item.id}">1</a>
 				</td>
 				<td>
-					${item.order_money}
+					<a href="/apps/rebate/rebate_order_list/?id=${item.id}">2</a>
 				</td>
 				<td>
 					${item.first_buy_num}
