--- a/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/rebates.html
@@ -132,7 +132,7 @@
 					</a>
 				</td>
 				<td>
-					<a href="/apps/rebate/attention_participances/?id=${item.id}">${item.attention_number}</a>
+					<a href="/apps/rebate/attention_participances/?id=${item.id}">5</a>
 				</td>
 				<td>
 					${item.order_money}
